--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,7 +20,7 @@ WORKDIR /usr/src/app/
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install -g --unsafe-perm node-red \ node-red-contrib-modbus --unsafe-perm --build-from-source \
+RUN JOBS=MAX npm install -g --unsafe-perm --build-from-source node-red node-red-contrib-modbus  \
   && npm rm -rf /tmp/*
 
 # This will copy all files in our root to the working  directory in the container
